# rag

./: .gitignore  README.md  rag_notes
00_MLOps/04_usecases/: .gitignore  config.yaml  main.py  pyproject.toml
00_MLOps/04_usecases/01_churn_prediction/: check_status.py  churn_pipeline.yaml  create_bucket.py  get_model_uri.py  main.py  pyproject.toml  upload_to_s3.py
00_MLOps/04_usecases/01_churn_prediction/.dvc/: config
00_MLOps/04_usecases/01_churn_prediction/data/raw/: .gitignore  customers.csv.dvc
00_MLOps/04_usecases/01_churn_prediction/src/: generate_data.py
00_MLOps/04_usecases/01_churn_prediction/src/feature_repo/: feature_store.yaml  features.py
00_MLOps/04_usecases/01_churn_prediction/src/pipelines/: data_validation.py  training_pipeline.py
00_MLOps/04_usecases/common/: config.py
00_MLOps/04_usecases/feature_repo/: feature_store.yaml  features.py
00_MLOps/04_usecases/pipelines/: churn_training.yaml
00_MLOps/04_usecases/uc_1_churn_prediction/flows/: churn_pipeline.py
00_MLOps/04_usecases/uc_1_churn_prediction/tasks/: data_ingestion.py  data_validation.py  data_versioning.py  feature_engineering.py  model_serving.py  model_training.py
00_MLOps/04_usecases/usecase1_churn_prediction/: pyproject.toml
00_MLOps/04_usecases/usecase1_churn_prediction/airflow/dags/: data_ingestion_dag.py  data_ingestion_dag_v2.py  data_validation_dag.py  feature_engineering_dag.py
00_MLOps/04_usecases/usecase1_churn_prediction/docker/: Dockerfile.airflow
00_MLOps/04_usecases/usecase1_churn_prediction/k8s/: airflow-shared-pvc.yaml
00_MLOps/04_usecases/usecase1_churn_prediction/tests/integration/: test_postgres.py
airflow_mlflow_kubeflow/00_mlflow/mlflow_usecases/: .gitignore  03_model_serving.py  check_env.py  pyproject.toml
airflow_mlflow_kubeflow/00_mlflow/mlflow_usecases/phase1/: 03_hyperparameter_search_explained.py  03_hyperparameter_search_interactive.ipynb  mlflow_phase1.md
airflow_mlflow_kubeflow/00_mlflow/mlflow_usecases/phase2/: mlflow_phase2.md
airflow_mlflow_kubeflow/00_mlflow/mlflow_usecases/phase2/notebook/: 01_artifacts.ipynb  02_model_logging.ipynb  02_pickle_tutorial.ipynb  03_signatures.ipynb  04_model_flavors.ipynb
airflow_mlflow_kubeflow/00_mlflow/mlflow_usecases/phase2/py/: 02_model_logging.py
airflow_mlflow_kubeflow/00_mlflow/mlflow_usecases/phase3/: mlflow_phase3.md
airflow_mlflow_kubeflow/00_mlflow/mlflow_usecases/phase3/notebook/: 01_register_model.ipynb  02_model_stages.ipynb  03_load_from_registry.ipynb  04_registry_workflow.ipynb
airflow_mlflow_kubeflow/00_mlflow/mlflow_usecases/phase3/py/: 01_register_model.py  02_model_stages.py  03_load_from_registry.py  04_registry_workflow.py
airflow_mlflow_kubeflow/00_mlflow/mlflow_usecases/phase4/: mlflow_phase4.md
airflow_mlflow_kubeflow/00_mlflow/mlflow_usecases/phase4/notebook/: 01_prepare_model.ipynb  02_test_serving.ipynb
airflow_mlflow_kubeflow/00_mlflow/mlflow_usecases/phase5/: mlflow_phase5.md
airflow_mlflow_kubeflow/00_mlflow/mlflow_usecases/phase6/: 01_model_comparison.py  02_validation_gates.py  04_model_aliases.py  05_advanced_search.py  07_pytorch_integration.py  08_monitoring_drift.py  mlflow_phase6.md
ml-foundations/: .gitignore  generate_reports.sh  main.py  mlflow.db  pyproject.toml  test_formatting.py  test_setup.py
ml-foundations/notebooks/: 01_data_exploration.ipynb  02_marimo_exploration.py  03_template_report.ipynb  04_mlflow_tracking.ipynb
ml-foundations/notebooks/__marimo__/session/: 02_marimo_exploration.py.json
ml-foundations/notebooks/reports/: report_setosa.ipynb  report_versicolor.ipynb  report_virginica.ipynb
rag_v1/: .env.example  .gitignore  docker-compose.yml  main.py  pyproject.toml
rag_v1/src/rag/: cli.py  config.py  exceptions.py  logging_config.py  models.py
rag_v1/src/rag/api/: main.py
rag_v1/src/rag/embeddings/: embedder.py
rag_v1/src/rag/ingestion/: chunker.py  loader.py
rag_v1/src/rag/llm/: groq.py
rag_v1/src/rag/retrieval/: reranker.py
rag_v1/src/rag/services/: base.py  ingestion.py  retrieval.py
rag_v1/src/rag/vectorstore/: qdrant.py
rag_v1/tests/: test_chunker.py  test_cli.py  test_embedder.py  test_groq.py  test_loader.py  test_qdrant.py  test_reranker.py
(+263 files in other folders)
