[project]
name = "ml-foundations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.1",
    "marimo>=0.18.4",
    "matplotlib>=3.10.8",
    "mlflow>=3.8.1",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "papermill>=2.6.0",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
]
