[project]
name = "rag-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "groq>=1.0.0",
    "mypy>=1.19.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pymupdf>=1.26.7",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "rich>=14.2.0",
    "ruff>=0.14.10",
    "sentence-transformers>=5.2.0",
]

[project.scripts]
rag = "rag.cli:main"  # Defines 'rag' command that calls main() from cli.py

[tool.uv]
package = true  # Enable entry point installation for CLI commands

[tool.pytest.ini_options]
pythonpath = ["src"]  # Tell pytest where to find the rag module
testpaths = ["tests"]  # Where to look for tests
