[project]
name = "usecase1-churn-prediction"
version = "0.1.0"
description = "End-to-end ML pipeline for customer churn prediction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Data versioning
    "dvc[s3]>=3.55.0",
    # Data processing
    "pandas>=2.2.0",
    "pyarrow>=18.0.0",
    # Data validation
    "great-expectations>=1.2.0",
    # Feature store
    "feast>=0.40.0",
    # ML frameworks
    "scikit-learn>=1.5.0",
    # Experiment tracking
    "mlflow>=2.19.0",
    # Database
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    # S3/MinIO
    "boto3>=1.35.0",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."] 
