[project]
name = "mlflow-examples"
version = "0.1.0"
description = "MLflow example scripts for enterprise ML workflows"
requires-python = ">=3.12"
dependencies = [
    # Core MLflow
    "mlflow>=2.19.0",
    # ML libraries
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    # Visualization
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    # API/HTTP
    "requests>=2.32.0",
    # Statistics (Phase 6: comparison, drift detection)
    "scipy>=1.14.0",
    "statsmodels>=0.14.0",
    # Jupyter support
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]

[project.optional-dependencies]
# Deep learning support (Phase 6: PyTorch integration)
pytorch = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]
# All optional dependencies
all = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

[tool.uv]
dev-dependencies = []
